--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 attrs==20.3.0
+-e git+https://github.com/OSM-es/CatAtom3Dfix.git@8bf8713ab85c17d0a88fbb5e5e7746ae622567cf#egg=catatom3dfix
 certifi==2020.12.5
 chardet==4.0.0
-cmake==3.18.4.post1
 idna==2.10
-importlib-metadata==4.0.0
+importlib-metadata==4.0.1
 iniconfig==1.1.1
 osmapi==1.3.0
 osmium==3.1.3
@@ -11,11 +11,10 @@ packaging==20.9
 pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
-pytest==6.2.3
+pytest==6.2.4
 requests==2.25.1
 Shapely==1.7.1
 toml==0.10.2
-typing-extensions==3.7.4.3
+typing-extensions==3.10.0.0
 urllib3==1.26.4
-wget==3.2
 zipp==3.4.1
