--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.4
 requests==2.25.1
+Rtree==0.9.7
 Shapely==1.7.1
 toml==0.10.2
 typing-extensions==3.10.0.0
